# spmenu

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.html  README.md  TODO  build.sh  buildconf  code.html  colors.h  draw.c  host.mk  keybinds.h  meson.build  meson.options  meson_options.txt  mouse.h  options.h  options.mk  spmenu.1  spmenu.c  spmenu.html  spmenu_run.1  spmenu_test.1  toggle.h  toggle.mk  xresources.h
contrib/: binds-vim.conf
docs/: binds-vim.conf  code-docs.md  docs.md  example.Xresources  releaseinfo.md  run-docs.md  spmenu.conf  spmenu_desktop.desktop  spmenu_filemanager.desktop  spmenu_run.desktop  test-docs.md
libs/: arg.c  arg.h  argv.c  argv.h  client.c  client.h  colors.h  define.c  draw.c  draw.h  event.c  event.h  fifo.c  history.c  history.h  icon.c  icon.h  img-c.c  img-c.h  img.c  img.h  key.c  key.h  key_struct.c  keybinds.h  main.c  match.c  match.h  mode.c  mode.h  mouse.c  mouse.h  options.h  rtl-c.c  rtl-c.h  rtl-none.c  rtl-none.h  rtl.c  rtl.h  schemes.c  (+8 more)
libs/conf/: config.c  config.h
libs/draw/: draw.c  draw.h
libs/libdrw/: draw.c  drw.c  drw.h
libs/regex/: regex.h
libs/sl/: draw-pango.c  draw-pango.h  draw-xft.c  draw-xft.h  draw.c  draw.h  main.c  main.h
libs/theme/: theme.c  theme.h
libs/wl/: inc.c  inc.h  init.c  init.h  wayland.c  wayland.h  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-protocol.c  xdg-output-unstable-v1-protocol.c  xdg-shell-protocol.c
libs/x11/: client.c  client.h  clipboard.c  clipboard.h  def.h  event.c  event.h  focus.h  inc.c  inc.h  init.c  init.h  key.c  key.h  lib.h  mod.c  mod.h  mouse.c  mouse.h  xim.c  xim.h  xrdb.c  xrdb.h  xresources.h
packaging/: libspmenu.ebuild  spmenu.PKGBUILD  spmenu.ebuild
protocols/: generate.sh  xdg-shell.xml
scripts/: spmenu_desktop  spmenu_fm  spmenu_make  spmenu_path  spmenu_profile  spmenu_run  spmenu_test
scripts/examples/: README.md  install.sh  spmenu_16cols.sh  spmenu_imageviewer.sh  spmenu_itemcounter.sh  spmenu_musiclist.sh  spmenu_pdflist.sh  spmenu_sweden.sh
scripts/make/: build.sh  clean.sh  generate-argument-list.sh  generate-code-docs.sh  generate-docs.sh  generate-headers.sh  generate-keybind-list.sh  generate-pacman-pkg.sh  generate-pkg.sh  generate-theme.sh
src/: arg.c  argv.c  draw.c  fifo.c  history.c  img.c  rtl.c  spmenu.c
src/conf/: config.c  config.h
src/draw/: draw.c
src/libs/: argv.c  draw.h  icon.c  match.c  options.h  schemes.c  schemes.h  sort.c
src/libs/conf/: config.c
src/libs/draw/: draw.c
src/libs/regex/: regex.c
src/libs/wl/: inc.h  init.c  shm.c
src/libs/x11/: client.c  clipboard.c  focus.c  init.c  key.c  mouse.c  mouse.h  xrdb.h
src/libspmenu/: libspmenu.cpp  libspmenu.h  meson.build  test.cpp
src/wl/: inc.c  wayland.h
src/x11/: client.c  focus.h  inc.c  inc.h  init.c  init.h  key.h  lib.h  xim.c  xresources.h
themes/: Arc-Dark.conf  Catppuccin  Catppuccin.conf  Cyberpunk-Neon  Cyberpunk-Neon.conf  Doom-One.conf  Dracula.conf  Gruvbox-Dark  Gruvbox-Dark.conf  Gruvbox-Light.conf  Gruvbox-Material.conf  No-Global-Colors  NoPywal  Nord.conf  README.md  Solarized-Dark  Solarized-Dark.conf  Solarized-Light.conf  Tokyo-Night  Tokyo-Night.conf  dmenu.conf  install.sh  sample.theme
themes/legacy/: Arc-Dark  Catppuccin  Cyberpunk-Neon  Doom-One  Dracula  Gruvbox-Dark  Nord  Solarized-Dark  Solarized-Light  Tokyo-Night
